prevent tap highlight color on mobile

--- a/Styles.css
+++ b/Styles.css
@@ -26,6 +26,7 @@
 }
 
 * {
+    -webkit-tap-highlight-color:transparent;
     margin: 0;
     font-family: "Montserrat", sans-serif;
 }
